# FashionTech-AI-Hub

./: README.md
FashionSense-AI/: Readme.md  app.py
FashionSense-AI/Modules/: outfit_suggester.py
GenAI-Virtual-TryOn/: README.md
LLM-Fashion-Recommender/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
LLM-Fashion-Recommender/src/: config.py
LLM-Fashion-Recommender/src/api/: main.py
LLM-Fashion-Recommender/src/api/routers/: recommender.py
LLM-Fashion-Recommender/src/indexing/: data_loader.py  embedding.py
LLM-Fashion-Recommender/src/recommender/: check_topic_node.py  graph.py  rag_node.py  ranker_node.py  self_query_node.py  state.py  utils.py
LLM-Fashion-Recommender/src/retriever/: hybrid_retriever.py
LLM-Fashion-Recommender/src/ui/: app.py
