[project]
name = "llm-based-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.23",
    "faiss-cpu>=1.9.0.post1",
    "fastapi==0.115.7",
    "ipykernel>=6.29.5",
    "kaggle==1.6.17",
    "langchain==0.3.15",
    "langchain-chroma==0.2.0",
    "langchain-community==0.3.15",
    "langchain-core==0.3.31",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface==0.1.2",
    "langchain-ollama>=0.2.2",
    "langchain-openai==0.3.2",
    "langgraph>=0.2.67",
    "loguru==0.7.3",
    "nemoguardrails==0.11.0",
    "numpy==1.26.4",
    "ollama>=0.4.7",
    "pandas>=2.1.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "python-dotenv==1.0.1",
    "rank-bm25==0.2.2",
    "streamlit>=1.41.1",
    "transformers==4.46.3",
]
